fix: padding on mobile

--- a/src/components/layout/Navbar.module.scss
+++ b/src/components/layout/Navbar.module.scss
@@ -20,7 +20,8 @@
 
 .navbar-button-transparent {
   background-color: transparent;
-  padding: 0.2em;
+  padding-top: 6px;
+  padding-bottom: 6px;
   padding-left: 1.5em;
   padding-right: 1.5em;
   border: 0;
@@ -29,7 +30,8 @@
 
 .navbar-button-color {
   background-color: purple;
-  padding: 0.2em;
+  padding-top: 6px;
+  padding-bottom: 6px;
   padding-left: 1.5em;
   padding-right: 1.5em;
   border: 0;
